Expand the names of the services

--- a/_includes/menu-amazon.html
+++ b/_includes/menu-amazon.html
@@ -8,26 +8,26 @@
   <li class="tab-amazon-cloudsearch"><a href="/amazon/cloudsearch/">CloudSearch</a></li>
   <li class="tab-amazon-cloudwatch"><a href="/amazon/cloudwatch/">CloudWatch</a></li>
   <li class="tab-amazon-dynamodb"><a href="/amazon/dynamodb/">DynamoDB</a></li>
-  <li class="tab-amazon-ec2"><a href="/amazon/ec2/">EC2</a></li>
+  <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Elastic Compute Cloud (EC2)</a></li>
   <li class="tab-amazon-elasticache"><a href="/amazon/elasticache/">ElastiCache</a></li>
   <li class="tab-amazon-elasticbeanstalk"><a href="/amazon/elasticbeanstalk/">ElasticBeanstalk</a></li>
-  <li class="tab-amazon-elb"><a href="/amazon/elb/">ELB</a></li>
-  <li class="tab-amazon-emr"><a href="/amazon/emr/">EMR</a></li>
-  <li class="tab-amazon-fps"><a href="/amazon/fps/">FPS</a></li>
+  <li class="tab-amazon-elb"><a href="/amazon/elb/">Elastic LoadBalancers (ELB)</a></li>
+  <li class="tab-amazon-emr"><a href="/amazon/emr/">Elastic MapReduce (EMR)</a></li>
+  <li class="tab-amazon-fps"><a href="/amazon/fps/">Flexible Payments Service (FPS)</a></li>
   <li class="tab-amazon-glacier"><a href="/amazon/glacier/">Glacier</a></li>
-  <li class="tab-amazon-iam"><a href="/amazon/iam/">IAM</a></li>
-  <li class="tab-amazon-imd"><a href="/amazon/imd/">IMD</a></li>
+  <li class="tab-amazon-iam"><a href="/amazon/iam/">Identity and Access Management (IAM)</a></li>
+  <li class="tab-amazon-imd"><a href="/amazon/imd/">Instance MetaData (IMD)</a></li>
   <li class="tab-amazon-importexport"><a href="/amazon/importexport/">ImportExport</a></li>
-  <li class="tab-amazon-rds"><a href="/amazon/rds/">RDS</a></li>
+  <li class="tab-amazon-rds"><a href="/amazon/rds/">Relational Database Service (RDS)</a></li>
   <li class="tab-amazon-route53"><a href="/amazon/route53/">Route53</a></li>
-  <li class="tab-amazon-s3"><a href="/amazon/s3/">S3</a></li>
-  <li class="tab-amazon-ses"><a href="/amazon/ses/">SES</a></li>
+  <li class="tab-amazon-s3"><a href="/amazon/s3/">Simple Storage Service (S3)</a></li>
+  <li class="tab-amazon-ses"><a href="/amazon/ses/">Simple Email Service (SES)</a></li>
   <li class="tab-amazon-simpledb"><a href="/amazon/simpledb/">SimpleDB</a></li>
-  <li class="tab-amazon-sns"><a href="/amazon/sns/">SNS</a></li>
-  <li class="tab-amazon-sqs"><a href="/amazon/sqs/">SQS</a></li>
+  <li class="tab-amazon-sns"><a href="/amazon/sns/">Simple Notification Service (SNS)</a></li>
+  <li class="tab-amazon-sqs"><a href="/amazon/sqs/">Simple Queue Service (SQS)</a></li>
   <li class="tab-amazon-storagegateway"><a href="/amazon/storagegateway/">StorageGateway</a></li>
-  <li class="tab-amazon-sts"><a href="/amazon/sts/">STS</a></li>
-  <li class="tab-amazon-swf"><a href="/amazon/swf/">SWF</a></li>
+  <li class="tab-amazon-sts"><a href="/amazon/sts/">Simple Token Service (STS)</a></li>
+  <li class="tab-amazon-swf"><a href="/amazon/swf/">Simple WorkFlow (SWF)</a></li>
 
   <li class="nav-header">Misc</li>
   <li class="tab-amazon-signatures"><a href="/amazon/signatures.html">Signatures</a></li>
