Fix these links for deeper pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,9 +41,9 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="tab-home"><a href="/">Home</a></li>
-              <li class="tab-bugs"><a href="bugs.html">Bugs</a></li>
-              <li class="tab-links"><a href="links.html">Links</a></li>
-              <li class="tab-about"><a href="about.html">About</a></li>
+              <li class="tab-bugs"><a href="/bugs.html">Bugs</a></li>
+              <li class="tab-links"><a href="/links.html">Links</a></li>
+              <li class="tab-about"><a href="/about.html">About</a></li>
             </ul>
           </div><!-- /.nav-collapse -->
         </div><!-- /.container-fluid -->
